# BlueRetro

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  package_release.sh  partitions.csv  pytest.ini  sdkconfig  sdkconfig.defaults
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: build.yml  metric.yml  newidf.yml  pytest.yml  quick.yml
components/queue_bss/: CMakeLists.txt  linker.lf  queue_bss.c  queue_bss.h
configs/: 3do_external  3do_sd  3do_spiffs  cdi_external  cdi_sd  cdi_spiffs  dc_external  dc_sd  dc_spiffs  gc_external  gc_sd  gc_spiffs  genesis_external  genesis_sd  genesis_spiffs  jag_external  jag_sd  jag_spiffs  jvs_external  jvs_sd  jvs_spiffs  n64_external  n64_sd  n64_spiffs  nes_external  nes_sd  nes_spiffs  pad_test  parallel_1d_od_external  parallel_1p_external  parallel_1p_od_spiffs  parallel_1p_sd  parallel_1p_spiffs  parallel_2p_external  parallel_2p_od_external  parallel_2p_sd  parallel_2p_spiffs  pce_external  pce_sd  pce_spiffs  (+19 more)
configs/dbg/: maple_sniffer  pad_test  qemu
configs/hw1/: 3do  cdi  dbg_injector  dbg_qemu  dbg_qemu_bt_trace_replay  dbg_qemu_bt_trace_replay_test  dreamcast  gamecube  gamecube_retroscaler  gbahd  genesis  jaguar  jvs_arcade  n64  nes  ogx360  parallel_1p  parallel_1p_3v3  parallel_2p  parallel_2p_3v3  pc_engine  pcfx  playstation  saturn  snes  universal  virtualboy  wii_extension
configs/hw2/: 3do  cdi  dreamcast  gamecube  gbahd  genesis  jaguar  jvs_arcade  n64  nes  ogx360  pad_test  parallel_1p  parallel_1p_3v3  parallel_2p  parallel_2p_3v3  pc_engine  pcfx  playstation  saturn  snes  virtualboy  wii_extension
main/: CMakeLists.txt  Kconfig.projbuild  adapter.c  adapter.h  bitbang.c  bitbang.h  bt.c  bt.h  bt_att.c  bt_att.h  bt_hci.c  bt_hci.h  bt_hidp.c  bt_hidp.h  bt_hidp_kbm.c  bt_hidp_kbm.h  bt_hidp_ps3.c  bt_hidp_ps3.h  bt_hidp_ps4.c  bt_hidp_ps4.h  bt_hidp_sw.c  bt_hidp_sw.h  bt_hidp_wii.c  bt_hidp_wii.h  bt_hidp_xb1.c  bt_hidp_xb1.h  bt_host.c  bt_host.h  bt_l2cap.c  bt_l2cap.h  bt_sdp.c  bt_sdp.h  component.mk  config.c  config.h  dc.c  dc.h  hidp.h  input.h  io.c  (+21 more)
main/adapter/: adapter.c  adapter.h  adapter_debug.c  adapter_debug.h  cdi.c  cdi.h  config.c  config.h  dc.c  dc.h  gameid.c  gameid.h  gc.c  gc.h  genesis.c  genesis.h  hid_generic.c  hid_generic.h  hid_parser.c  hid_parser.h  jag.c  jag.h  jvs.c  jvs.h  kb_monitor.c  kb_monitor.h  macro.c  macro.h  mapping_quirks.c  mapping_quirks.h  memory_card.c  memory_card.h  n64.c  n64.h  npiso.c  npiso.h  parallel_1p.c  parallel_1p.h  parallel_2p.c  parallel_2p.h  (+27 more)
main/adapter/wired/: cdi.c  cdi.h  dc.c  dc.h  gc.c  gc.h  genesis.c  genesis.h  jag.c  jag.h  joystick_serial_out.c  joystick_serial_out.h  jvs.c  jvs.h  n64.c  n64.h  npiso.c  npiso.h  ogx360.c  ogx360.h  parallel_1p.c  parallel_1p.h  parallel_2p.c  parallel_2p.h  parallel_auto.c  parallel_auto.h  pce.c  pce.h  pcfx.c  pcfx.h  ps.c  ps.h  real.c  real.h  saturn.c  saturn.h  sea.c  sea.h  wii.c  wii.h  (+2 more)
main/adapter/wireless/: hid_generic.c  hid_generic.h  ps.c  ps.h  ps3.c  ps3.h  sw.c  sw.h  sw2.c  sw2.h  wii.c  wii.h  wireless.c  wireless.h  xbox.c  xbox.h
main/bluetooth/: att.c  att.h  att_cfg.c  att_cfg.h  att_hid.c  att_hid.h  debug.c  debug.h  hci.c  hci.h  hidp.c  hidp.h  hidp_generic.c  hidp_generic.h  hidp_kbm.c  hidp_kbm.h  hidp_ps.c  hidp_ps.h  hidp_ps3.c  hidp_ps3.h  hidp_ps4.c  hidp_ps4.h  hidp_ps4_ps5.c  hidp_ps4_ps5.h  hidp_sw.c  hidp_sw.h  hidp_wii.c  hidp_wii.h  hidp_xb1.c  hidp_xb1.h  hidp_xbox.c  host.c  host.h  l2cap.c  l2cap.h  mon.c  mon.h  sdp.c  sdp.h  smp.c  (+1 more)
main/bluetooth/hidp/: generic.c  generic.h  hidp.c  hidp.h  ps.c  ps.h  ps3.c  ps3.h  sw.c  sw.h  sw2.c  sw2.h  wii.c  wii.h  xbox.c  xbox.h
main/drivers/: led.c  led.h  sd.c  sd.h
main/system/: bare_metal_app_cpu.c  bare_metal_app_cpu.h  btn.c  btn.h  core0_stall.c  core0_stall.h  core0_stall_highint_hdl.S  delay.c  delay.h  fpga_config.c  fpga_config.h  fs.c  fs.h  gpio.c  gpio.h  intr.c  intr.h  led.c  led.h  manager.c  manager.h  sd.c  startup.c
main/tests/: cmds.c  cmds.h  coverage.c  coverage.h  ws_srv.c  ws_srv.h
main/tools/: devcrypto.c  devcrypto.h  ps1_gameid.c  ps1_gameid.h  util.h
main/wired/: cdi_uart.c  cdi_uart.h  detect.c  detect.h  jag_io.c  jag_io.h  jvs.c  jvs.h  jvs_uart.c  jvs_uart.h  maple.c  maple.h  npiso.c  npiso.h  npiso_io.c  npiso_io.h  nsi.c  nsi.h  ogx360_i2c.c  ogx360_i2c.h  parallel.c  parallel.h  pce_io.c  pce_io.h  pcfx_spi.c  pcfx_spi.h  ps_spi.c  ps_spi.h  real_spi.c  real_spi.h  sea_io.c  sea_io.h  sega_io.c  sega_io.h  snes_spi.c  snes_spi.h  wii_i2c.c  wii_i2c.h  wired_bare.c  wired_bare.h  (+4 more)
main/zephyr/: atomic.S  atomic.h  att.h  att_internal.h  gatt.h  hci.h  l2cap_internal.h  sdp.h  sdp_internal.h  smp.h  usb_hid.h  uuid.h
static/: README.md
tests/: bit_helper.py  conftest.py  injector.py  pytest_atari_vcs_classic.py  pytest_atari_vcs_modern.py  pytest_flydigi_apex_3.py  pytest_google_stadia.py  pytest_hid_controller.py  pytest_hid_controller_a.py  pytest_hid_controller_b.py  pytest_hid_keyboard.py  pytest_injector_sanity.py  pytest_ps3_ds3_controller.py  pytest_ps4_ds4_controller.py  pytest_ps5_ds_controller.py  pytest_ps5_ds_new_controller.py  pytest_sw_genesis_controller.py  pytest_sw_hk_admiral_controller.py  pytest_sw_left_joycon_controller.py  pytest_sw_n64_controller.py  pytest_sw_nes_controller.py  pytest_sw_powera_gc_controller.py  pytest_sw_pro_controller.py  pytest_sw_rf_brawler64_controller.py  pytest_sw_right_joycon_controller.py  pytest_sw_snes_controller.py  pytest_wii_classic_controller.py  pytest_wii_classic_pro_controller.py  pytest_wii_nunchuck_controller.py  pytest_wiimote_controller.py  pytest_wiiu_pro_controller.py  pytest_xbox_ble_controller.py  pytest_xiaomi_mi.py  trace_replay.py
tests/device_data/: br.py  gc.py  hid.py  n64.py  ps.py  ps3.py  saturn.py  sw.py  test_data_generator.py  wii.py  xbox.py
tools/: btmon_btsnoop.py  btmon_btsnoop_file.py  btmon_h4.py  btmon_h5.py  flash_blueretro.py
