idf_component_register(SRCS "main.c"
                            "adapter/adapter.c"
                            "adapter/config.c"
                            "adapter/hid_parser.c"
                            "adapter/hid_generic.c"
                            "adapter/kb_monitor.c"
                            "adapter/npiso.c"
                            "adapter/cdi.c"
                            "adapter/saturn.c"
                            "adapter/pce.c"
                            "adapter/genesis.c"
                            "adapter/real.c"
                            "adapter/jag.c"
                            "adapter/pcfx.c"
                            "adapter/jvs.c"
                            "adapter/n64.c"
                            "adapter/dc.c"
                            "adapter/gc.c"
                            "adapter/ps.c"
                            "adapter/ps3.c"
                            "adapter/wii.c"
                            "adapter/ps4_ps5.c"
                            "adapter/xb1.c"
                            "adapter/sw.c"
                            "adapter/parallel_1p.c"
                            "adapter/parallel_2p.c"
                            "bluetooth/host.c"
                            "bluetooth/debug.c"
                            "bluetooth/hci.c"
                            "bluetooth/l2cap.c"
                            "bluetooth/sdp.c"
                            "bluetooth/att.c"
                            "bluetooth/hidp.c"
                            "bluetooth/hidp_generic.c"
                            "bluetooth/hidp_ps3.c"
                            "bluetooth/hidp_wii.c"
                            "bluetooth/hidp_ps4_ps5.c"
                            "bluetooth/hidp_xb1.c"
                            "bluetooth/hidp_sw.c"
                            "system/bare_metal_app_cpu.c"
                            "system/btn.c"
                            "system/core0_stall.c"
                            "system/core0_stall_highint_hdl.S"
                            "system/delay.c"
                            "system/fs.c"
                            "system/gpio.c"
                            "system/intr.c"
                            "system/led.c"
                            "system/startup.c"
                            "tools/stats.c"
                            "wired/detect.c"
                            "wired/npiso_io.c"
                            "wired/cdi_uart.c"
                            "wired/pce_io.c"
                            "wired/sega_io.c"
                            "wired/nsi.c"
                            "wired/maple.c"
                            "wired/jvs_uart.c"
                            "wired/parallel.c"
                            "wired/pcfx_spi.c"
                            "wired/ps_spi.c"
                            "wired/real_spi.c"
                            "wired/jag_io.c"
                            "zephyr/atomic.S"
                            "zephyr/xtensa_context.S"
                    PRIV_INCLUDE_DIRS "."
                    LDFRAGMENTS linker.lf)
idf_build_set_property(COMPILE_DEFINITIONS "-DBLUERETRO" APPEND)
idf_build_set_property(COMPILE_DEFINITIONS "-DXT_INTEXC_HOOKS" APPEND)
target_link_libraries(${COMPONENT_TARGET} "-u ld_include_my_startup_file")
target_link_libraries(${COMPONENT_TARGET} "-u ld_include_core0_stall_highint_hdl")
